# formation-project

./: .gitignore  app.py  pyproject.toml
.streamlit/: config.toml
data/brut/: VRP_DLP_106.txt  VRP_DLP_112.txt  VRP_DLP_180.txt  VRP_DLP_19.txt  VRP_DLP_204.txt  VRP_DLP_255.txt  VRP_DLP_91.txt
data/formated/: cities-france.csv
docs/: data_explication.txt  steps.txt
formation/: __init__.py  database.py  formation.py
formation/data/: cities.py  constants.py  map.py  pages.py  statistics.csv
formation/helpers/: clustering.py  layer.py  map.py  streamlit.py
formation/helpers/old/: map.py  streamlit.py
formation/models/: __init__.py  base.py  batch.py  configuration.py  distance.py  layer.py  metric.py  point.py  user.py
formation/pages/: batch.py  batches.py  configuration.py  followchon.py  home.py  layer.py  step_1.py  try_1.py  try_2.py  try_3.py
formation/pages/old/: try_1.py  try_2.py  try_3.py
notebooks/: 1st_method.ipynb  2nd_method.ipynb  3nd_try.ipynb  first_steps.ipynb
scripts/: step_1_filter.py  step_3_format.py  step_6_merge.py
scripts/distances/: step_2_distances.py  step_4_cut.py  step_5_pivot.py
scripts/methods/: method_1.py  method_2.py  selection.py
