[project]
name = "formation"
version = "0.1.0"
description = ""
authors = [
    {name = "Jaden ACHAIN",email = "jaden.achain@gmail.com"}
]
readme = "README.md"
requires-python = "~3.10"
package-mode = false
dependencies = [
    "pandas (>=2.3.2,<3.0.0)",
    "plotly (>=6.3.0,<7.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "streamlit (>=1.49.1,<2.0.0)",
    "hvplot (>=0.12.1,<0.13.0)",
    "holoviews (>=1.21.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
