[project]
name = "formation"
version = "0.1.0"
description = ""
authors = [
    {name = "Jaden ACHAIN",email = "jaden.achain@gmail.com"}
]
readme = "README.md"
requires-python = "~3.10"
package-mode = false
dependencies = [
    "pandas (>=2.3.2,<3.0.0)",
    "plotly (>=6.3.0,<7.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "streamlit (>=1.49.1,<2.0.0)",
    "hvplot (>=0.12.1,<0.13.0)",
    "holoviews (>=1.21.0,<2.0.0)",
    "dask[distributed] (>=2025.9.1,<2026.0.0)",
    "streamlit-folium (>=0.25.3,<0.26.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "shapely (>=2.1.2,<3.0.0)",
    "geopy (>=2.4.1,<3.0.0)",
    "ipyleaflet (>=0.20.0,<0.21.0)",
    "kaleido (>=1.1.0,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
